# FullScreen-Pencil-Draw

./: .gitignore  222  CMakeLists.txt  CONTRIBUTING.md  DRAG_DROP_FEATURE.md  Makefile  README.md  SCREENSHOTS_GUIDE.md  THIRD_PARTY_LICENSES.md  sdsdfd  todo.md
.github/workflows/: build-and-test.yml  release.yml
App/: OpenPaint.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  paintscene.cpp  paintscene.h  toolbox.cpp  toolbox.h  toolbox.ui
App/widgets/: canvas.cpp  canvas.h  tool_panel.h
App/windows/: main_window.cpp  main_window.h
resources/: katex.html  mermaid.html  resources.qrc  ui_icons.qrc
src/: main.cpp
src/core/: action.cpp  action.h  app_constants.h  auto_save_manager.cpp  auto_save_manager.h  brush_tip.cpp  brush_tip.h  fill_utils.cpp  fill_utils.h  image_filters.cpp  image_filters.h  item_id.h  item_ref.h  item_store.cpp  item_store.h  katex_renderer.cpp  katex_renderer.h  layer.cpp  layer.h  mermaid_renderer.cpp  mermaid_renderer.h  pdf_document.cpp  pdf_document.h  pdf_overlay.cpp  pdf_overlay.h  project_serializer.cpp  project_serializer.h  recent_files_manager.cpp  recent_files_manager.h  scene_controller.cpp  scene_controller.h  scene_renderer.h  snap_engine.cpp  snap_engine.h  theme_manager.cpp  theme_manager.h  transform_action.cpp  transform_action.h  undo_redo_manager.cpp  undo_redo_manager.h
src/tools/: arrow_tool.cpp  arrow_tool.h  bezier_tool.cpp  bezier_tool.h  circle_tool.cpp  circle_tool.h  eraser_tool.cpp  eraser_tool.h  fill_tool.cpp  fill_tool.h  highlighter_tool.cpp  highlighter_tool.h  lasso_selection_tool.cpp  lasso_selection_tool.h  line_tool.cpp  line_tool.h  mermaid_tool.cpp  mermaid_tool.h  pan_tool.cpp  pan_tool.h  pen_tool.cpp  pen_tool.h  rectangle_tool.cpp  rectangle_tool.h  selection_tool.cpp  selection_tool.h  shape_tool.cpp  shape_tool.h  text_on_path_tool.cpp  text_on_path_tool.h  text_tool.cpp  text_tool.h  tool.cpp  tool.h  tool_manager.cpp  tool_manager.h
src/widgets/: alignment_dialog.cpp  alignment_dialog.h  animated_button.cpp  animated_button.h  architecture_elements.cpp  architecture_elements.h  brush_preview.cpp  brush_preview.h  brush_stroke_item.cpp  brush_stroke_item.h  busy_spinner_overlay.cpp  busy_spinner_overlay.h  canvas.cpp  canvas.h  color_curves_dialog.cpp  color_curves_dialog.h  dock_title_bar.cpp  dock_title_bar.h  electronics_elements.cpp  electronics_elements.h  element_bank_panel.cpp  element_bank_panel.h  image_size_dialog.cpp  image_size_dialog.h  latex_text_item.cpp  latex_text_item.h  layer_panel.cpp  layer_panel.h  mermaid_text_item.cpp  mermaid_text_item.h  page_thumbnail_panel.cpp  page_thumbnail_panel.h  pdf_search_bar.cpp  pdf_search_bar.h  pdf_viewer.cpp  pdf_viewer.h  perspective_transform_dialog.cpp  perspective_transform_dialog.h  resize_canvas_dialog.cpp  resize_canvas_dialog.h  (+16 more)
src/windows/: main_window.cpp  main_window.h
tests/: CMakeLists.txt  test_alignment_dialog.cpp  test_architecture_elements.cpp  test_brush_tip.cpp  test_busy_spinner_overlay.cpp  test_canvas_interaction.cpp  test_electronics_elements.cpp  test_group_clipboard.cpp  test_image_filters.cpp  test_item_store.cpp  test_latex_unicode.cpp  test_perspective_transform.cpp  test_project_serializer.cpp  test_rotation_dialog.cpp  test_side_tab_bar.cpp  test_snap_engine.cpp  test_text_whitespace.cpp  test_transform_action.cpp  test_undo_redo_manager.cpp  test_wire_item.cpp
